RH_and_GitLab_Configuration.adoc: Remove Public Email requirement
The webhooks no longer need a Public Email [1].  Remove all mentions of the
requirement in the doc.

[1] https://gitlab.com/cki-project/kernel-webhooks/-/merge_requests/615
Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/docs/RH_and_GitLab_Configuration.adoc
+++ b/docs/RH_and_GitLab_Configuration.adoc
@@ -17,35 +17,32 @@ Users can associate their redhat.com email address with an existing GitLab accou
 * users must specify their LDAP redhat.com email address as one of the email addresses in their account; *email aliases will only work if the user’s LDAP redhat.com email address is also specified in the user’s account*.
 * a redhat.com LDAP email address or redhat.com email alias must be the https://gitlab.com/-/profile/emails[Primary Email address] on the account.  *The* https://gitlab.com/-/profile/emails[*Primary Email address*] *must match the email address that is used to send and receive GitLab and kernel workflow email.*
 
-*It is strongly recommended that users specify the same email address for Email, Public Email, and Commit Email in the* https://gitlab.com/-/profile[*Gitlab Profile tab*]*.*  Additional configuration steps such as making the redhat.com email public, configuring ssh-key, personal access tokens (PATs), and the Red Hat GitLab SAML are discussed in the sections below.
+*It is strongly recommended that users specify the same email address for the "Email" and "Commit
+Email" settings in the* https://gitlab.com/-/profile[*Gitlab Profile tab*]*.*  Additional configuration steps such as configuring ssh-key, personal access tokens (PATs), and the Red Hat GitLab SAML are discussed in the sections below.
 
 === Associating with an existing account
 
-Existing GitLab account holders can associate their redhat.com email address to their account at https://gitlab.com/profile/emails[https://gitlab.com/profile/emails], and should note the required change for link:RH_and_GitLab_Configuration.adoc#user-content-gitlab-public-email-configuration[GitLab Public Email Configuration].  The redhat.com email address must be changed to the primary address on the account at https://gitlab.com/profile[https://gitlab.com/profile].
+Existing GitLab account holders can associate their redhat.com email address to their account at https://gitlab.com/profile/emails[https://gitlab.com/profile/emails].  The redhat.com email address must be changed to the primary address on the account at https://gitlab.com/profile[https://gitlab.com/profile].
 
 Existing users must log out, and re-authenticate through https://auth.redhat.com/auth/realms/EmployeeIDP/protocol/saml/clients/gitlab-groups-redhat[Red Hat GitLab SAML].
 
 === Creating a new account with a custom username
 
-If you do not have a GitLab account, go to https://gitlab.com/users/sign_in[https://gitlab.com/users/sign_in] and create a new account with your redhat.com email address.  Users should note the required change for link:RH_and_GitLab_Configuration.adoc#user-content-gitlab-public-email-configuration[GitLab Public Email Configuration].
+If you do not have a GitLab account, go to https://gitlab.com/users/sign_in[https://gitlab.com/users/sign_in] and create a new account with your redhat.com email address.
 
 After creating the account, users must log out, and re-authenticate through https://auth.redhat.com/auth/realms/EmployeeIDP/protocol/saml/clients/gitlab-groups-redhat[Red Hat GitLab SAML].
 
 === Create a new account with your Red Hat username
 
-Users can automatically create a new account with their Red Hat username by logging into the https://auth.redhat.com/auth/realms/EmployeeIDP/protocol/saml/clients/gitlab-groups-redhat[Red Hat GitLab SAML].  The login process will detect that no account is associated with the redhat.com email address and create a new account.  If your Red Hat username is already in use by another GitLab account the creation process will append a number to your username, for example, “prarit3” instead of “prarit”.  Users should note the required change for link:RH_and_GitLab_Configuration.adoc#user-content-gitlab-public-email-configuration[GitLab Public Email Configuration].
+Users can automatically create a new account with their Red Hat username by logging into the https://auth.redhat.com/auth/realms/EmployeeIDP/protocol/saml/clients/gitlab-groups-redhat[Red Hat GitLab SAML].  The login process will detect that no account is associated with the redhat.com email address and create a new account.  If your Red Hat username is already in use by another GitLab account the creation process will append a number to your username, for example, “prarit3” instead of “prarit”.
 
 After successful authentication through the Red Hat GitLab SAML, users should see the “Red Hat Enterprise Linux” project at https://gitlab.com/redhat[https://gitlab.com/redhat].
 
-== GitLab Public Email Configuration
-
-The https://gitlab.com/cki-project/kernel-webhooks/[kernel-webhooks] currently require that email addresses must be public.  This can be set by clicking the GitLab Avatar in the top right corner and selecting Settings.  On the User Settings page, select Profile, and the Main Settings section.  Select “Public Email” and select the user account email address.  The “Public Email” email address also must match the email address used in https://gitlab.com/redhat/centos-stream/src/kernel/documentation/-/blob/main/info/owners.yaml[documentation project’s owners.yaml].
-
 === Email Aliases and GitLab
 
-Contributors must match the public GitLab address with the $GIT_AUTHOR_EMAIL of any submitted commits.  There are no restrictions on email address use by reviewers.
+Contributors must match the GitLab email address with the $GIT_AUTHOR_EMAIL of any submitted commits.  There are no restrictions on email address use by reviewers.
 
-Red Hat contributors can use their email alias as their submitting email as long as *_both_* their LDAP email and email alias are added to the same GitLab account (the LDAP email can remain non-public).  The LDAP email is used to link the GitLab account to LDAP through the SAML verification.  The email alias is used to link the alias to the GitLab account for the kernel-webhooks verification.
+Red Hat contributors can use their email alias as their Commit Email as long as *_both_* their LDAP email and email alias are added to the same GitLab account.  The LDAP email is used to link the GitLab account to LDAP through the SAML verification.  The email alias is used to link the alias to the GitLab account for the kernel-webhooks verification.
 
 == GitLab SSH Configuration
 
@@ -110,7 +107,7 @@ Solutions:
 	Solution: If your redhat.com LDAP email was not associated with a Gitlab account when you clicked on the SAML link, it is possible that an account was created for just your LDAP email address.  This situation is common for developers who use email addresses.  You can resolve this issue by deleting the newly created LDAP account.
 
 ** Login into the newly created LDAP account with the password and https://docs.gitlab.com/ee/user/profile/account/delete_account.html[delete the account].   If you do not have the password, goto https://gitlab.com[https://gitlab.com], login in with the LDAP email address and reset the account’s password.
-** Add the LDAP email address to your original account.  Note the requirements above for providing a public redhat.com email address.
+** Add the LDAP email address to your original account.
 ** Login through the https://auth.redhat.com/auth/realms/EmployeeIDP/protocol/saml/clients/gitlab-groups-redhat[SAML] link.
 
 === How can I unassociate the Red Hat SAML login with my account?
@@ -130,11 +127,11 @@ Some users have reported this issue when connecting to GitLab with newer version
 
 to your ssh configuration file (typically ~/.ssh/config).
 
-=== Where can I find the Email, Primary Email, Public Email, and Commit Email settings in my profile, and how should they be configured?
+=== Where can I find the Email, Primary Email, and Commit Email settings in my profile, and how should they be configured?
 
-The Email, Public Email, and Commit Email settings can be found in your https://gitlab.com/-/profile[profile tab].  You can add email addresses to your account in the https://gitlab.com/-/profile/emails[Email tab] and see which address is set as the Primary Email.  The Primary Email is reflected in the Email entry in your https://gitlab.com/-/profile[profile tab].
+The Email, Primary Email, and Commit Email settings can be found in your https://gitlab.com/-/profile[profile tab].  You can add email addresses to your account in the https://gitlab.com/-/profile/emails[Email tab] and see which address is set as the Primary Email.  The Primary Email is reflected in the Email entry in your https://gitlab.com/-/profile[profile tab].
 
-It is strongly recommended that you use the same email address for all email address settings. The kernel-webhooks currently only require that a redhat.com email address be the Primary and Public email, however, this may change in the future.
+To avoid confusion, it is strongly recommended that you use the same email address for all email address settings.
 
 === I'm using https://red.ht/GitLabSSO[https://red.ht/GitLabSSO] to login to GitLab and can see centos-stream and other public projects but cannot see the RHEL projects.
 
