[redhat] kernel-rt-5.14.0-139.rt21.139.el9
Bugzilla: 2061574
Signed-off-by: Luis Claudio R. Goncalves <lgoncalv@redhat.com>

--- a/redhat/kernel-rt.changelog-9.1
+++ b/redhat/kernel-rt.changelog-9.1
@@ -1,3 +1,81 @@
+* Tue Aug 02 2022 Luis Claudio R. Goncalves <lgoncalv@redhat.com> [5.14.0-139.rt21.139.el9]
+- [rt] build kernel-rt-5.14.0-139.rt21.139.el9 [2061574]
+- RDMA/irdma: Fix sleep from invalid context BUG (Kamal Heib) [2097326]
+- RDMA/irdma: Do not advertise 1GB page size for x722 (Kamal Heib) [2097326]
+- RDMA/cm: Fix memory leak in ib_cm_insert_listen (Kamal Heib) [2097326]
+- RDMA/hfi1: Fix potential integer multiplication overflow errors (Kamal Heib) [2097326]
+- RDMA/hfi1: Prevent use of lock before it is initialized (Kamal Heib) [2097326]
+- KVM: selftests: Fix target thread to be migrated in rseq_test (Gavin Shan) [2106955]
+- net: mld: fix reference count leak in mld_{query | report}_work() (Hangbin Liu) [2067774]
+- vsock/virtio: add support for device suspend/resume (Stefano Garzarella) [2107589]
+- vsock/virtio: factor our the code to initialize and delete VQs (Stefano Garzarella) [2107589]
+- hv_sock: Add validation for untrusted Hyper-V values (Stefano Garzarella) [2107589]
+- vsock/virtio: enable VQs early on probe (Stefano Garzarella) [2107589]
+- vsock/virtio: read the negotiated features before using VQs (Stefano Garzarella) [2107589]
+- vsock/virtio: initialize vdev->priv before using VQs (Stefano Garzarella) [2107589]
+- af_vsock: SOCK_SEQPACKET broken buffer test (Stefano Garzarella) [2107589]
+- af_vsock: SOCK_SEQPACKET receive timeout test (Stefano Garzarella) [2107589]
+- vsock: each transport cycles only on its own sockets (Stefano Garzarella) [2107589]
+- vhost/vsock: don't check owner in vhost_vsock_stop() while releasing (Stefano Garzarella) [2107589]
+- vsock: remove vsock from connected table when connect is interrupted by a signal (Stefano Garzarella) [2107589]
+- platform: goldfish: pipe: Use platform_get_irq() to get the interrupt (Mark Langsdorf) [2068298]
+- MIPS: Loongson64: Add missing of_node_put() in ls2k_reset_init() (Mark Langsdorf) [2068298]
+- MIPS: Loongson64: Add Loongson-2K1000 reset platform driver (Mark Langsdorf) [2068298]
+- platform/mellanox: mlxbf-pmc: Fix an IS_ERR() vs NULL bug in mlxbf_pmc_map_counters (Mark Langsdorf) [2068298]
+- platform/mellanox: mlxreg-lc: fix error code in mlxreg_lc_create_static_devices() (Mark Langsdorf) [2068298]
+- redhat/configs: enable CONFIG_MLXREG_LC (Mark Langsdorf) [2068298]
+- platform/mellanox: mlxreg-lc: Add initial support for Nvidia line card devices (Mark Langsdorf) [2068298]
+- platform_data/mlxreg: Add new field for secured access (Mark Langsdorf) [2068298]
+- platform/mellanox: mlxreg-io: Extend number of hwmon attributes (Mark Langsdorf) [2068298]
+- platform/mellanox: mlxreg-hotplug: Extend logic for hotplug devices operations (Mark Langsdorf) [2068298]
+- platform_data/mlxreg: Add new type to support modular systems (Mark Langsdorf) [2068298]
+- platform/mellanox: mlxreg-io: Fix read access of n-bytes size attributes (Mark Langsdorf) [2068298]
+- platform/mellanox: mlxreg-io: Fix argument base in kstrtou32() call (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_debugfs: detach log reader wq from devm (Mark Langsdorf) [2068298]
+- platform: chrome: Split trace include file (Mark Langsdorf) [2068298]
+- platform/chrome: sensorhub: Add trace events for sample (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_typec: Update mux flags during partner removal (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_typec: Configure muxes at start of port update (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_typec: Get mux state inside configure_mux (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_typec: Move mux flag checks (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec: Make cros_ec_unregister() return void (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_typec: Check for EC device (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_typec: Make try power role optional (Mark Langsdorf) [2068298]
+- redhat/configs: don't enable ChromeOS privacy screen (Mark Langsdorf) [2068298]
+- platform/chrome: Add driver for ChromeOS privacy-screen (Mark Langsdorf) [2068298]
+- drm/privacy-screen: Fix sphinx warning (Mark Langsdorf) [2068298]
+- drm/privacy_screen: Add drvdata in drm_privacy_screen (Mark Langsdorf) [2068298]
+- drm/connector: Add a drm_connector privacy-screen helper functions (v2) (Mark Langsdorf) [2068298]
+- drm/privacy-screen: Add notifier support (v2) (Mark Langsdorf) [2068298]
+- drm/privacy-screen: Add X86 specific arch init code (Mark Langsdorf) [2068298]
+- drm: Add privacy-screen class (v4) (Mark Langsdorf) [2068298]
+- drm/connector: Add support for privacy-screen properties (v4) (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_proto: Add version for ec_command (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_proto: Make data pointers void (Mark Langsdorf) [2068298]
+- platform/chrome: cros_usbpd_notify: Move ec_command() (Mark Langsdorf) [2068298]
+- platform/chrome: cros_usbpd_notify: Rename cros_ec_pd_command() (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec: Fix spelling mistake "responsed" -> "response" (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_sensorhub: simplify getting .driver_data (Mark Langsdorf) [2068298]
+- platform/chrome: cros-ec-typec: Cleanup use of check_features (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_typec: Use existing feature check (Mark Langsdorf) [2068298]
+- platform/chrome: cros_ec_proto: Fix check_features ret val (Mark Langsdorf) [2068298]
+- drm/mgag200: Enable atomic gamma lut update (Jocelyn Falempe) [2078542]
+- drm/mgag200: Optimize damage clips (Jocelyn Falempe) [2078542]
+- drm/mgag200: Add FB_DAMAGE_CLIPS support (Jocelyn Falempe) [2078542]
+- cgroup: use irqsave in cgroup_rstat_flush_locked(). (Waiman Long) [2060150]
+- cgroup-v1: Correct privileges check in release_agent writes (Waiman Long) [2060150]
+- cgroup/cpuset: Fix a race between cpuset_attach() and cpu hotplug (Waiman Long) [2060150]
+- psi: Fix uaf issue when psi trigger is destroyed while being polled (Waiman Long) [2060150]
+- cgroup/cpuset: Make child cpusets restrict parents on v1 hierarchy (Waiman Long) [2060150]
+- cgroup/cpuset: Don't let child cpusets restrict parent in default hierarchy (Waiman Long) [2060150]
+- mm/page_alloc: detect allocation forbidden by cpuset and bail out early (Waiman Long) [2060150]
+- cgroup: Fix rootcg cpu.stat guest double counting (Waiman Long) [2060150]
+- cgroup: no need for cgroup_mutex for /proc/cgroups (Waiman Long) [2060150]
+- cgroup: remove cgroup_mutex from cgroupstats_build (Waiman Long) [2060150]
+- cgroup: reduce dependency on cgroup_mutex (Waiman Long) [2060150]
+- cgroup/cpuset: Change references of cpuset_mutex to cpuset_rwsem (Waiman Long) [2060150]
+Resolves: rhbz#2061574
+
 * Mon Aug 01 2022 Luis Claudio R. Goncalves <lgoncalv@redhat.com> [5.14.0-138.rt21.138.el9]
 - [rt] build kernel-rt-5.14.0-138.rt21.138.el9 [2061574]
 - tools/testing/nvdimm: Fix security_init() symbol collision (Jeff Moyer) [2096788]
