[redhat] kernel-5.14.0-140.el9
Signed-off-by: Patrick Talbert <ptalbert@redhat.com>

--- a/redhat/kernel.changelog-9.1
+++ b/redhat/kernel.changelog-9.1
@@ -1,3 +1,13 @@
+* Tue Aug 02 2022 Patrick Talbert <ptalbert@redhat.com> [5.14.0-140.el9]
+- tracing: Show size of requested perf buffer (Michael Petlan) [2106297]
+- tracing: Increase PERF_MAX_TRACE_SIZE to handle Sentinel1 and docker together (Michael Petlan) [2106297]
+- ibmvnic: Properly dispose of all skbs during a failover. (Steve Best) [2107561]
+- powerpc/fadump: save CPU reg data in vmcore when PHYP terminates LPAR (Steve Best) [2104440]
+- perf cpumap: Add perf_cpu_map__for_each_idx() (Michael Petlan) [2085427]
+- perf stat: Make use of index clearer with perf_counts (Michael Petlan) [2085427]
+- perf stat: Fix and validate CPU map inputs in synthetic PERF_RECORD_STAT events (Michael Petlan) [2085427]
+Resolves: rhbz#2106297, rhbz#2107561, rhbz#2104440, rhbz#2085427
+
 * Mon Aug 01 2022 Patrick Talbert <ptalbert@redhat.com> [5.14.0-139.el9]
 - RDMA/irdma: Fix sleep from invalid context BUG (Kamal Heib) [2097326]
 - RDMA/irdma: Do not advertise 1GB page size for x722 (Kamal Heib) [2097326]
