Reworded how the webhook applies blocking label.
It is simpler than previously noted in that gitlab keeps track of the
information and the webhook just tracks the presence of the approval
rules.

Signed-off-by: Andrew Walsh <awalsh@redhat.com>

--- a/docs/merge_request_approvals_and_blocks.adoc
+++ b/docs/merge_request_approvals_and_blocks.adoc
@@ -95,7 +95,7 @@ The other way to block an open MR is to add a comment with `/block` in its conte
 === Example using /block keyword
 image::images/approvals-blocked_keyword.png[caption=""]
 
-The effect of this /block will have the `CKI KWF Bot` tally up the number of `/block` and `/unblock` and set the image:images/approvals-label_image_acks_blocked.png["Acks::Blocked"] label if there are still unresolved `/block` operations.
+The effect of this /block will have the `CKI KWF Bot` set the image:images/approvals-label_image_acks_blocked.png["Acks::Blocked"] label if there are still unresolved `/block` operations.
 
 == Unblocking a Merge Request with the /unblock keyword
 :sectnums:
