Added Examples of Blocking Rule and Approval Resolution
Previously it wasn't noted that simply hitting the 'Approve' button
would resolve the blocking rule, so that is now called out explicitly
here.

Additionally, there's a screen shot to support it.

Signed-off-by: Andrew Walsh <awalsh@redhat.com>

--- a/docs/merge_request_approvals_and_blocks.adoc
+++ b/docs/merge_request_approvals_and_blocks.adoc
@@ -90,12 +90,16 @@ The above image shows what a blocking thread looks like once it has been blocked
 == Blocking a Merge Request with the /block keyword
 :sectnums:
 
-The other way to block an open MR is to add a comment with `/block` in its contents (alone on the start of a line)
+The other way to block an open MR is to add a comment with `/block` in its contents (alone on the start of a line).  This is enforced by adding an approval rule (near the Approve button) that must be satisfied before the MR can be merged.
 
 === Example using /block keyword
 image::images/approvals-blocked_keyword.png[caption=""]
 
 The effect of this /block will have the `CKI KWF Bot` set the image:images/approvals-label_image_acks_blocked.png["Acks::Blocked"] label if there are still unresolved `/block` operations.
+
+=== Example of the Approval Rule showing up on a blocked MR
+image::images/approvals-blocking_approval_rule.png[caption=""]
+
 
 == Unblocking a Merge Request with the /unblock keyword
 :sectnums:
@@ -107,3 +111,7 @@ image::images/approvals-unblocked_keyword.png[caption=""]
 
 Note that in this particular image, the Acks are not satisfied, but the image:images/approvals-label_image_acks_blocked.png["Acks::Blocked"] label has been removed by the `/unblock`.
 
+== Unblocking a Merge Request with the Approve button
+:sectnums:
+
+An MR that has been blocked via the /block functionality can also be unblocked by using the Approve button as detailed in <<Approving a Merge Request via GitLab Web interface>>
