--- a/docs/merge_request_approvals_and_blocks.adoc
+++ b/docs/merge_request_approvals_and_blocks.adoc
@@ -95,10 +95,13 @@ The other way to block an open MR is to add a comment with `/block` in its conte
 === Example using /block keyword
 image::images/approvals-blocked_keyword.png[caption=""]
 
-The effect of this /block will have the `CKI KWF Bot` set the image:images/approvals-label_image_acks_blocked.png["Acks::Blocked"] label if there are still unresolved `/block` operations.
+The effect of this /block will have the `CKI KWF Bot` set the image:images/approvals-label_image_acks_blocked.png["Acks::Blocked"] label if there are still unresolved `/block` operations.  This is also reflected on the Ack/Nack summary comment.
 
 === Example of the Approval Rule showing up on a blocked MR
 image::images/approvals-blocking_approval_rule.png[caption=""]
+
+=== Example of the Approval Rule noted by the Ack/Nack Comment
+image::images/approvals-blocked_acknack.png[caption=""]
 
 
 == Unblocking a Merge Request with the /unblock keyword
