[redhat] kernel-automotive-5.14.0-137.99.el9iv
Signed-off-by: Scott Weaver <scweaver@redhat.com>

--- a/redhat/kernel-automotive.changelog-9.1
+++ b/redhat/kernel-automotive.changelog-9.1
@@ -1,3 +1,125 @@
+* Wed Aug 03 2022 Scott Weaver <scweaver@redhat.com> [5.14.0-137.99.el9iv]
+- [automotive] build kernel-automotive-5.14.0-137.99.el9iv
+- md: fix double free of io_acct_set bioset (Nigel Croxon) [2105293]
+- md: Don't set mddev private to NULL in raid0 pers->free (Nigel Croxon) [2105293]
+- md: remove most calls to bdevname (Nigel Croxon) [2105293]
+- md: protect md_unregister_thread from reentrancy (Nigel Croxon) [2105293]
+- md: don't unregister sync_thread with reconfig_mutex held (Nigel Croxon) [2105293]
+- md: Replace role magic numbers with defined constants (Nigel Croxon) [2105293]
+- md/raid0: Ignore RAID0 layout if the second zone has only one device (Nigel Croxon) [2105293]
+- md/raid5: Annotate functions that hold device_lock with __must_hold (Nigel Croxon) [2105293]
+- md/raid5-ppl: Annotate with rcu_dereference_protected() (Nigel Croxon) [2105293]
+- md/raid5: Annotate rdev/replacement access when mddev_lock is held (Nigel Croxon) [2105293]
+- md/raid5: Annotate rdev/replacement accesses when nr_pending is elevated (Nigel Croxon) [2105293]
+- md/raid5: Add __rcu annotation to struct disk_info (Nigel Croxon) [2105293]
+- md/raid5: Un-nest struct raid5_percpu definition (Nigel Croxon) [2105293]
+- md/raid5: Cleanup setup_conf() error returns (Nigel Croxon) [2105293]
+- md: replace deprecated strlcpy & remove duplicated line (Nigel Croxon) [2105293]
+- md/bitmap: don't set sb values if can't pass sanity check (Nigel Croxon) [2105293]
+- md: fix an incorrect NULL check in md_reload_sb (Nigel Croxon) [2105293]
+- md: fix an incorrect NULL check in does_sb_need_changing (Nigel Croxon) [2105293]
+- raid5: introduce MD_BROKEN (Nigel Croxon) [2105293]
+- md: Set MD_BROKEN for RAID1 and RAID10 (Nigel Croxon) [2105293]
+- raid5: initialize the stripe_head embeeded bios as needed (Nigel Croxon) [2105293]
+- raid5-cache: statically allocate the recovery ra bio (Nigel Croxon) [2105293]
+- raid5-cache: fully initialize flush_bio when needed (Nigel Croxon) [2105293]
+- raid5-ppl: fully initialize the bio in ppl_new_iounit (Nigel Croxon) [2105293]
+- md: use msleep() in md_notify_reboot() (Nigel Croxon) [2105293]
+- md: raid1/raid10: drop pending_cnt (Nigel Croxon) [2105293]
+- net: Don't include filter.h from net/sock.h (Petr Oros) [2101792]
+- sfc: fix considering that all channels have TX queues (Íñigo Huguet) [2106076]
+- sfc: fix wrong tx channel offset with efx_separate_tx_channels (Íñigo Huguet) [2106076]
+- NFSv4.1 support for NFS4_RESULT_PRESERVER_UNLINKED (Scott Mayhew) [2066368]
+- bpf: Fix request_sock leak in sk lookup helpers (Felix Maurer) [2102742]
+- xsk: Fix generic transmit when completion queue reservation fails (Felix Maurer) [2102742]
+- xsk: Fix handling of invalid descriptors in XSK TX batching API (Felix Maurer) [2102742]
+- xsk: Fix possible crash when multiple sockets are created (Felix Maurer) [2102742]
+- xsk: Fix l2fwd for copy mode + busy poll combo (Felix Maurer) [2102742]
+- bpf: Support dual-stack sockets in bpf_tcp_check_syncookie (Felix Maurer) [2102742]
+- xsk: Fix race at socket teardown (Felix Maurer) [2102742]
+- netdevsim: don't overwrite read only ethtool parms (Antoine Tenart) [2101836]
+- Bluetooth: btmtksdio: fix possible FW initialization failure (Gopal Tiwari) [2097262]
+- Bluetooth: btmtksdio: fix the reset takes too long (Gopal Tiwari) [2097262]
+- Bluetooth: btmtksdio: Fix kernel oops when sdio suspend. (Gopal Tiwari) [2097262]
+- Bluetooth: mt7921s: support bluetooth reset mechanism (Gopal Tiwari) [2097262]
+- Bluetooth: mt7921s: fix btmtksdio_[drv|fw]_pmctrl() (Gopal Tiwari) [2097262]
+- Bluetooth: btmtksdio: refactor btmtksdio_runtime_[suspend|resume]() (Gopal Tiwari) [2097262]
+- Bluetooth: mt7921s: fix bus hang with wrong privilege (Gopal Tiwari) [2097262]
+- Bluetooth: mt7921s: Enable SCO over I2S (Gopal Tiwari) [2097262]
+- Bluetooth: mt7921s: fix firmware coredump retrieve (Gopal Tiwari) [2097262]
+- Bluetooth: mt7921s: Support wake on bluetooth (Gopal Tiwari) [2097262]
+- Enable MTK BT Support for RHEL (Gopal Tiwari) [2097262]
+- redhat: workaround CKI cross compilation for scripts (Jan Stancek) [2101805]
+- redhat/configs: Support QAT devices for x86 only (Vladis Dronov) [2040726]
+- crypto: qat - expose device config through sysfs for 4xxx (Vladis Dronov) [2040726]
+- crypto: qat - relocate and rename adf_sriov_prepare_restart() (Vladis Dronov) [2040726]
+- crypto: qat - change behaviour of adf_cfg_add_key_value_param() (Vladis Dronov) [2040726]
+- crypto: qat - expose device state through sysfs for 4xxx (Vladis Dronov) [2040726]
+- crypto: qat - Removes the x86 dependency on the QAT drivers (Vladis Dronov) [2040726]
+- crypto: qat - replace get_current_node() with numa_node_id() (Vladis Dronov) [2040726]
+- crypto: qat - add support for 401xx devices (Vladis Dronov) [2040726]
+- crypto: qat - re-enable registration of algorithms (Vladis Dronov) [2040726]
+- crypto: qat - honor CRYPTO_TFM_REQ_MAY_SLEEP flag (Vladis Dronov) [2040726]
+- crypto: qat - add param check for DH (Vladis Dronov) [2040726]
+- crypto: qat - add param check for RSA (Vladis Dronov) [2040726]
+- crypto: qat - remove dma_free_coherent() for DH (Vladis Dronov) [2040726]
+- crypto: qat - fix memory leak in RSA (Vladis Dronov) [2040726]
+- crypto: qat - add backlog mechanism (Vladis Dronov) [2040726]
+- crypto: qat - refactor submission logic (Vladis Dronov) [2040726]
+- crypto: qat - use pre-allocated buffers in datapath (Vladis Dronov) [2040726]
+- crypto: qat - set to zero DH parameters before free (Vladis Dronov) [2040726]
+- crypto: qat - Fix unsigned function returning negative constant (Vladis Dronov) [2040726]
+- crypto: qat - remove line wrapping for pfvf_ops functions (Vladis Dronov) [2040726]
+- crypto: qat - use u32 variables in all GEN4 pfvf_ops (Vladis Dronov) [2040726]
+- crypto: qat - replace disable_vf2pf_interrupts() (Vladis Dronov) [2040726]
+- crypto: qat - leverage the GEN2 VF mask definiton (Vladis Dronov) [2040726]
+- crypto: qat - rework the VF2PF interrupt handling logic (Vladis Dronov) [2040726]
+- crypto: qat - fix off-by-one error in PFVF debug print (Vladis Dronov) [2040726]
+- crypto: qat - fix wording and formatting in code comment (Vladis Dronov) [2040726]
+- crypto: qat - test PFVF registers for spurious interrupts on GEN4 (Vladis Dronov) [2040726]
+- crypto: qat - add check for invalid PFVF protocol version 0 (Vladis Dronov) [2040726]
+- crypto: qat - add missing restarting event notification in VFs (Vladis Dronov) [2040726]
+- crypto: qat - remove unnecessary tests to detect PFVF support (Vladis Dronov) [2040726]
+- crypto: qat - remove unused PFVF stubs (Vladis Dronov) [2040726]
+- crypto: qat - remove unneeded braces (Vladis Dronov) [2040726]
+- crypto: qat - fix ETR sources enabled by default on GEN2 devices (Vladis Dronov) [2040726]
+- crypto: qat - set COMPRESSION capability for DH895XCC (Vladis Dronov) [2040726]
+- crypto: qat - set CIPHER capability for DH895XCC (Vladis Dronov) [2040726]
+- crypto: qat - stop using iommu_present() (Vladis Dronov) [2040726]
+- crypto: qat - fix initialization of pfvf rts_map_msg structures (Vladis Dronov) [2040726]
+- crypto: qat - fix initialization of pfvf cap_msg structures (Vladis Dronov) [2040726]
+- crypto: qat - remove unneeded assignment (Vladis Dronov) [2040726]
+- crypto: qat - disable registration of algorithms (Vladis Dronov) [2040726]
+- crypto: qat - enable power management for QAT GEN4 (Vladis Dronov) [2040726]
+- crypto: qat - move and rename GEN4 error register definitions (Vladis Dronov) [2040726]
+- crypto: qat - add misc workqueue (Vladis Dronov) [2040726]
+- crypto: qat - don't cast parameter in bit operations (Vladis Dronov) [2040726]
+- crypto: qat - fix access to PFVF interrupt registers for GEN4 (Vladis Dronov) [2040726]
+- crypto: qat - fix a signedness bug in get_service_enabled() (Vladis Dronov) [2040726]
+- e1000e: Fix possible overflow in LTR decoding (Ken Cox) [2037986]
+- e1000e: Print PHY register address when MDI read/write fails (Ken Cox) [2037986]
+- e1000e: Correct NVM checksum verification flow (Ken Cox) [2037986]
+- e1000e: Fix possible HW unit hang after an s0ix exit (Ken Cox) [2037986 2049953]
+- e1000e: Handshake with CSME starts from ADL platforms (Ken Cox) [2037986 2049953]
+- e1000e: Separate ADP board type from TGP (Ken Cox) [2037986 2049953]
+- e1000e: Fix packet loss on Tiger Lake and later (Ken Cox) [2037986]
+- e1000e: Separate TGP board type from SPT (Ken Cox) [2037986]
+- e1000e: Remove redundant statement (Ken Cox) [2037986]
+- ethernet: use eth_hw_addr_set() for dev->addr_len cases (Ken Cox) [2037986]
+- net: e1000e: solve insmod 'Unknown symbol mutex_lock' error (Ken Cox) [2037986]
+- net/e1000e: Fix spelling mistake "The" -> "This" (Ken Cox) [2037986]
+- e1000e: Add space to the debug print (Ken Cox) [2037986]
+- e1000e: Add support for Lunar Lake (Ken Cox) [2037986]
+- e1000e: Additional PHY power saving in S0ix (Ken Cox) [2037986 2049953]
+- e1000e: Add polling mechanism to indicate CSME DPG exit (Ken Cox) [2037986 2049953]
+- e1000e: Add handshake with the CSME to support S0ix (Ken Cox) [2037986 2049953]
+- cpuidle,intel_idle: Fix CPUIDLE_FLAG_IRQ_ENABLE (Lenny Szubowicz) [2075710]
+- intel_idle: Add AlderLake support (Lenny Szubowicz) [2075710]
+- intel_idle: Fix SPR C6 optimization (Lenny Szubowicz) [2075710]
+- intel_idle: Fix the 'preferred_cstates' module parameter (Lenny Szubowicz) [2075710]
+- cpuidle: intel_idle: Update intel_idle() kerneldoc comment (Lenny Szubowicz) [2075710]
+Resolves: rhbz#2061574, rhbz#2061574, rhbz#2105293, rhbz#2101792, rhbz#2106076, rhbz#2066368, rhbz#2102742, rhbz#2101836, rhbz#2097262, rhbz#2101805, rhbz#2040726, rhbz#2037986, rhbz#2049953, rhbz#2075710
+
 * Sat Jul 30 2022 Julio Faracco <jfaracco@redhat.com> [5.14.0-136.98.el9iv]
 - [automotive] build kernel-automotive-5.14.0-136.98.el9iv
 - nfsd: destroy percpu stats counters after reply cache shutdown (Jeffrey Layton) [1998042]
