[redhat] kernel-5.14.0-141.el9
Signed-off-by: Patrick Talbert <ptalbert@redhat.com>

--- a/redhat/kernel.changelog-9.1
+++ b/redhat/kernel.changelog-9.1
@@ -1,3 +1,60 @@
+* Wed Aug 03 2022 Patrick Talbert <ptalbert@redhat.com> [5.14.0-141.el9]
+- Documentation: Add an explanation of NFSv4 client identifiers (Dave Wysochanski) [2112933]
+- powerpc/bpf: Fix use of user_pt_regs in uapi (Desnes A. Nunes do Rosario) [2113065]
+- Documentation: filesystems: proc: update meminfo section (David Hildenbrand) [2075394]
+- mm: make slab and vmalloc allocators __GFP_NOLOCKDEP aware (Waiman Long) [2109001]
+- mm/munlock: protect the per-CPU pagevec by a local_lock_t (Waiman Long) [2109671]
+- mm/migration: add trace events for base page and HugeTLB migrations (Waiman Long) [2109671]
+- powercap: intel_rapl: add support for ALDERLAKE_N (David Arcari) [2096965]
+- ACPI: VIOT: Fix ACS setup (Eric Auger) [2101431]
+- iommu/vt-d: Fix PCI bus rescan device hot add (Jerry Snitselaar) [2101592]
+- iommu/vt-d: Fix RID2PASID setup/teardown failure (Jerry Snitselaar) [2101592]
+- scsi: qla2xxx: Fix excessive I/O error messages by default (Nilesh Javali) [2083241]
+- ACPI: CPPC: Only probe for _CPC if CPPC v2 is acked (Mark Langsdorf) [2067297]
+- ACPI: CPPC: Change default error code and clean up debug messages in probe (Mark Langsdorf) [2067297]
+- ACPI: CPPC: Avoid out of bounds access when parsing _CPC data (Mark Langsdorf) [2067297]
+- ACPI: tables: Make LAPIC_ADDR_OVR address readable in message (Mark Langsdorf) [2067297]
+- ACPI: IPMI: replace usage of found with dedicated list iterator variable (Mark Langsdorf) [2067297]
+- ACPI, APEI: Use the correct variable for sizeof() (Mark Langsdorf) [2067297]
+- clocksource: acpi_pm: fix return value of __setup handler (Mark Langsdorf) [2067297]
+- ACPI / x86: Add support for LPS0 callback handler (Mark Langsdorf) [2067297]
+- ACPI: bus: Avoid using CPPC if not supported by firmware (Mark Langsdorf) [2067297]
+- Revert "ACPI: Pass the same capabilities to the _OSC regardless of the query flag" (Mark Langsdorf) [2067297]
+- ACPI: video: Force backlight native for Clevo NL5xRU and NL5xNU (Mark Langsdorf) [2067297]
+- PM: hibernate: Honour ACPI hardware signature by default for virtual guests (Mark Langsdorf) [2067297]
+- ACPI: NFIT: Remove block aperture support (Mark Langsdorf) [2067297]
+- x86, ACPI: rename init_freq_invariance_cppc() to arch_init_invariance_cppc() (Mark Langsdorf) [2067297]
+- ACPI/APEI: Limit printable size of BERT table data (Mark Langsdorf) [2067297]
+- ACPI: APEI: fix return value of __setup handlers (Mark Langsdorf) [2067297]
+- ACPI / x86: Add skip i2c clients quirk for Lenovo Yoga Tablet 1050F/L (Mark Langsdorf) [2067297]
+- ACPI / x86: Add skip i2c clients quirk for Nextbook Ares 8 (Mark Langsdorf) [2067297]
+- ACPICA: Avoid walking the ACPI Namespace if it is not there (Mark Langsdorf) [2067297]
+- ACPI: APEI: rename ghes_init() with an "acpi_" prefix (Mark Langsdorf) [2067297]
+- ACPI: APEI: explicit init of HEST and GHES in apci_init() (Mark Langsdorf) [2067297]
+- ACPI: processor idle: Check for architectural support for LPI (Mark Langsdorf) [2067297]
+- ACPI: LPSS: Provide an SSP type to the driver (Mark Langsdorf) [2067297]
+- ACPI: LPSS: Constify properties member in struct lpss_device_desc (Mark Langsdorf) [2067297]
+- ACPI: platform: Constify properties parameter in acpi_create_platform_device() (Mark Langsdorf) [2067297]
+- ACPI: battery: Add device HID and quirk for Microsoft Surface Go 3 (Mark Langsdorf) [2067297]
+- ACPI: fan: Add additional attributes for fine grain control (Mark Langsdorf) [2067297]
+- ACPI: fan: Properly handle fine grain control (Mark Langsdorf) [2067297]
+- ACPI: fan: Optimize struct acpi_fan_fif (Mark Langsdorf) [2067297]
+- ACPI: fan: Separate file for attributes creation (Mark Langsdorf) [2067297]
+- ACPI: fan: Fix error reporting to user space (Mark Langsdorf) [2067297]
+- ACPI: clean up double words in two comments (Mark Langsdorf) [2067297]
+- ACPI: property: Get rid of redundant 'else' (Mark Langsdorf) [2067297]
+- ACPI: scan: Use ida_alloc() instead of ida_simple_get() (Mark Langsdorf) [2067297]
+- ACPI: EC: Rearrange code in acpi_ec_submit_event() (Mark Langsdorf) [2067297]
+- ACPI: EC: Reduce indentation level in acpi_ec_submit_event() (Mark Langsdorf) [2067297]
+- ACPI: EC: Do not return result from advance_transaction() (Mark Langsdorf) [2067297]
+- ACPI: EC / PM: Print additional debug message in acpi_ec_dispatch_gpe() (Mark Langsdorf) [2067297]
+- ACPI: PM: Print additional debug message in acpi_s2idle_wake() (Mark Langsdorf) [2067297]
+- ACPI: tables: Add CEDT signature to the list of known tables (Mark Langsdorf) [2067297]
+- ACPI: properties: Consistently return -ENOENT if there are no more references (Mark Langsdorf) [2067297]
+- ACPI: OSL: Fix and clean up acpi_os_read/write_port() (Mark Langsdorf) [2067297]
+- ACPICA: Use uintptr_t and offsetof() in Linux kernel builds (Mark Langsdorf) [2067297]
+Resolves: rhbz#2112933, rhbz#2113065, rhbz#2075394, rhbz#2109001, rhbz#2109671, rhbz#2096965, rhbz#2101431, rhbz#2101592, rhbz#2083241, rhbz#2067297
+
 * Tue Aug 02 2022 Patrick Talbert <ptalbert@redhat.com> [5.14.0-140.el9]
 - tracing: Show size of requested perf buffer (Michael Petlan) [2106297]
 - tracing: Increase PERF_MAX_TRACE_SIZE to handle Sentinel1 and docker together (Michael Petlan) [2106297]
